--- a/IK/IK.vcxproj
+++ b/IK/IK.vcxproj
@@ -162,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="raygui.h" />
+    <ClInclude Include="TwoBoneIK2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
